server/nestjs/gateway/kubernetes/ingress/templates/ingress_prod.yaml
# Ingress Configuration
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fulllstack-app-ingress
  namespace: ecom
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    kubernetes.io/ingress.class: alb
spec:
  # ingressClassName: alb
  rules:
    - host:
      http:
        paths:
          - path: '/api/v1/'
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 3000
          - path: '/'
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
